refactored services to use mapper classes and DTOs, added inventory validatiion and purchase order mapping