@@ -1,7 +1,6 @@
 package com.stockflow.service.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -9,6 +8,7 @@ import com.stockflow.dto.VendorRequestDTO;
 import com.stockflow.dto.VendorResponseDTO;
 import com.stockflow.entity.Vendor;
 import com.stockflow.exception.ResourceNotFoundException;
+import com.stockflow.mapper.VendorMapper;
 import com.stockflow.repository.VendorRepository;
 import com.stockflow.service.VendorService;
 
@@ -23,19 +23,18 @@ public class VendorServiceImpl implements VendorService{
 	
 	@Override
 	public VendorResponseDTO createVendor(VendorRequestDTO dto) {
-		Vendor vendor = new Vendor();
-				vendor.setName(dto.getName());
-				vendor.setEmail(dto.getEmail());
-				vendor.setPhone(dto.getPhone());
-				vendor.setAddress(dto.getAddress());
+		
+		Vendor vendor = VendorMapper.toEntity(dto);
 		
 		Vendor saved = vendorRepository.save(vendor);
-		return mapToDTO(saved);
+		
+		return VendorMapper.toDTO(saved);
 	}
 
 	@Override
 	public List<VendorResponseDTO> getAllVendors() {
-		return vendorRepository.findAll().stream().map(this::mapToDTO).collect(Collectors.toList());
+		
+		return vendorRepository.findAll().stream().map(VendorMapper::toDTO).toList();
 	}
 
 	@Override
@@ -46,24 +45,19 @@ public class VendorServiceImpl implements VendorService{
 		vendor.setEmail(dto.getEmail());
 		vendor.setPhone(dto.getPhone());
 		vendor.setAddress(dto.getAddress());
-		return mapToDTO(vendor);
+		
+		Vendor updateVendor = vendorRepository.save(vendor);
+		
+		return VendorMapper.toDTO(updateVendor);
 	}
 
 	@Override
 	public void deleteVendor(Long id) {
 		
-		vendorRepository.deleteById(id);
+		Vendor vendor = vendorRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Vendor not found"));
 		
-	}
-	
-	private VendorResponseDTO mapToDTO(Vendor vendor) {
-		return new VendorResponseDTO(
-				vendor.getId(),
-				vendor.getName(),
-				vendor.getEmail(),
-				vendor.getPhone(),
-				vendor.getAddress()
-				);
+		vendorRepository.delete(vendor);
+		
 	}
 
 }
